...
                android:layout_weight="0.35">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Graphique des dépenses par mois"
                    android:id="@+id/checkBoxGraphMois"
                    android:checked="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="40dp" />

                <LinearLayout
                    android:id="@+id/dashboard_chart_mois"
...
                android:layout_marginTop="20dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Graphique des dépenses par domaine"
                    android:id="@+id/checkBoxGraphDomaine"
                    android:checked="false"
                    android:layout_marginLeft="35dp" />

                <LinearLayout
                    android:id="@+id/dashboard_chart_domaine"
                    android:orientation="horizontal"
...
