<resources>
    <string name="app_name">Finances &amp; Nous</string>
    <string name="title_activity_accueil">Finances &amp; Nous</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Options</string>
    <string name="title_activity_login">Finances &amp; Nous</string>

    <!-- Strings related to login -->
...
